
// SPDX-License-Identifier: MIT
// Copyright (c) 2024 nyashbox

syntax = "proto3";

package guidemyride.services.passenger;

service PassengerService {
	// TODO: add code here 
}
